[tool.poetry]
name = "wandelbots_python_jupyter"
version = "0.0.1"
description = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
python-dotenv = "^0.19.0"
wandelbots = "^0.3.2"
flask = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "2.17"

[tool.poetry.scripts]
serve = "wandelbots_python_jupiter:main"
