[tool.poetry]
name = "wandelbots_python_jupyter"
version = "0.0.1"
description = ""
readme = "README.md"
package-mode = false
authors = [
    "Wandelbots GmbH",
]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
python-dotenv = "^0.19.0"
wandelbots-nova = "^0.2.2"
flask = "^3.0.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
serve = "wandelbots_python_jupyter:main"
